syntax = "proto3";

package auth.v1;

option go_package = "github.com/titan-commerce/backend/auth-service/proto/auth/v1;authv1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // MFA
  rpc EnableMFA(EnableMFARequest) returns (EnableMFAResponse);
  rpc VerifyMFA(VerifyMFARequest) returns (VerifyMFAResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string mfa_code = 3; // Optional
}

message LoginResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  bool mfa_required = 4;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message EnableMFARequest {
  string user_id = 1;
}

message EnableMFAResponse {
  string secret = 1;
  string qr_code_url = 2;
}

message VerifyMFARequest {
  string user_id = 1;
  string code = 2;
}

message VerifyMFAResponse {
  bool success = 1;
  repeated string backup_codes = 2;
}
